--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,7 @@ target/classes/space/gatt/GattBot/Main.class
 *.xml
 *.xml
 .idea/workspace.xml
+*.xml
+.idea/workspace.xml
+*.class
+target/classes/space/gatt/GattBot/Main.class
