--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,5 @@ target/classes/space/gatt/GattBot/Main.class
 target/classes/space/gatt/GattBot/Main.class
 *.class
 target/classes/space/gatt/GattBot/Main.class
+target/classes/space/gatt/GattBot/Main$1.class
+*.class
