--- a/pom.xml
+++ b/pom.xml
@@ -56,7 +56,7 @@
     <repositories>
         <repository>
             <id>repo</id>
-            <url>file://${project.basedir}/repo/</url>
+            <url>file://${project.basedir}/repo</url>
         </repository>
         <repository>
             <id>me.itsghost</id>
@@ -68,11 +68,6 @@
         </repository>
     </repositories>
     <dependencies>
-        <!--><dependency><-->
-        <!-->    <groupId>me.itsghost</groupId><-->
-        <!-->    <artifactId>jDiscord</artifactId><-->
-        <!-->    <version>2.1.2</version><-->
-        <!--></dependency><-->
         <dependency>
             <groupId>commons.codec</groupId>
             <artifactId>commons-codec</artifactId>
@@ -84,9 +79,10 @@
             <version>2.6.2</version>
         </dependency>
         <dependency>
-            <groupId>lombok</groupId>
-            <artifactId>lombokjar</artifactId>
-            <version>1.0.0</version>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.16.8</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>de.btobastian.javacord</groupId>
