--- a/pom.xml
+++ b/pom.xml
@@ -38,8 +38,6 @@
                 <artifactId>maven-jar-plugin</artifactId>
                 <version>2.4</version>
                 <configuration>
-                    <source>7</source>
-                    <target>7</target>
                     <archive>
                         <manifest>
                             <addClasspath>true</addClasspath>
@@ -47,6 +45,16 @@
                             <mainClass>space.gatt.GattBot.Main</mainClass>
                         </manifest>
                     </archive>
+                </configuration>
+            </plugin>
+            <plugin>
+                <!-- Build an executable JAR -->
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.5.1</version>
+                <configuration>
+                    <source>7</source>
+                    <target>7</target>
                 </configuration>
             </plugin>
         </plugins>
