--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
                 <version>2.4</version>
+
                 <configuration>
                     <archive>
                         <manifest>
@@ -51,6 +52,14 @@
                 <!-- Build an executable JAR -->
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>attach-sources</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
                 <version>3.5.1</version>
                 <configuration>
                     <source>7</source>
