--- a/pom.xml
+++ b/pom.xml
@@ -110,7 +110,15 @@
         <dependency>
             <groupId>de.btobastian.javacord</groupId>
             <artifactId>javacord</artifactId>
-            <version>2.0.8</version>
+            <version>2.0.9</version>
+            <!-- This will use the shaded javacord which contains all required dependencies -->
+            <classifier>shaded</classifier>
+        </dependency>
+        <!-- A SLF4J comaptible logging framework. I would recommend to use logback -->
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.0.13</version>
         </dependency>
         <dependency>
             <groupId>org.java-websocket</groupId>
